fixed heading primary sub letter spacing and changed heading to Natours

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -27,7 +27,7 @@ body {
     display: block;
     font-size: 2rem;
     font-weight: lighter;
-    letter-spacing: 1.92rem;
+    letter-spacing: 1.7rem;
     animation-name: moveInFromRight;
     animation-duration: 1s;
   }
